--- a/p04css-responsive/cssnya_zulfahanaaq.css
+++ b/p04css-responsive/cssnya_zulfahanaaq.css
@@ -11,11 +11,11 @@
 }
 
 @media screen and (max-width:360px){
-  form{
+  #maincontent{
     width: auto;
     float: none;
   }
-  div{
+  #sidebar{
     width: auto;
     float: none;
   }
