--- a/css_pagehana.css
+++ b/css_pagehana.css
@@ -10,7 +10,9 @@
 @media screen and (max-width:600px) {
     .menu{ 
         width: auto;
-
+         }
+	.utama{
+        width: auto;
          }
 }
 
